--- a/pages/static/pages/style_header.css
+++ b/pages/static/pages/style_header.css
@@ -127,13 +127,14 @@
     }
 
     .nav-logo a {
+        font-family: 'Tenor Sans', sans-serif;
         font-size: 1.2rem;
-        font-weight: bolder;
+        font-weight: 400; 
+        letter-spacing: 2px;
         color: #ffffff;
         text-decoration: none;
         padding: 10px 15px;
         text-transform: uppercase;
-        letter-spacing: 1.5px;
         position: relative;
         padding-bottom: 8px;
         background-image: linear-gradient(to right, #009246 33.3%, #FFFFFF 33.3%, #FFFFFF 66.6%, #CE2B37 66.6%);
