--- a/pages/static/pages/style_header_2.css
+++ b/pages/static/pages/style_header_2.css
@@ -35,16 +35,20 @@
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        padding: 15px 40px;
+        padding: 10px 40px; 
     }
 
     .header-left, .header-right { flex: 1; }
     .header-center { flex: 2; text-align: center; }
     .header-right { justify-content: flex-end; display: flex; align-items: center; gap: 25px;}
     .header-left a, .header-right a { text-decoration: none; color: #1c1c1c; text-transform: uppercase; font-size: 0.8rem; letter-spacing: 1px; font-weight: 500;}
-    .header-center a { font-family: 'Tenor Sans', sans-serif; font-size: 1.8rem; letter-spacing: 2px; text-decoration: none; color: #1c1c1c; text-transform: uppercase;}
+    .header-center a { font-family: 'Tenor Sans', sans-serif; font-size: 1.8rem; letter-spacing: 2px; text-decoration: none; color: #1c1c1c; text-transform: uppercase;  transition: font-size 0.4s ease;}
     .header-right svg { width: 22px; height: 22px; stroke-width: 1.5; }
 
+
+    .minimalist-header.scrolled .header-center a {
+        font-size: 1.2rem; /* On réduit encore la taille à 1.2rem */
+    }
 
     .minimalist-header.scrolled .header-center a {
         padding-bottom: 8px;
@@ -58,8 +62,8 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        padding: 8px; /* Crée une zone de clic confortable */
-        border-radius: 50%; /* Le rend circulaire */
+        padding: 8px;
+        border-radius: 50%; 
         transition: background-color 0.3s ease;
     }
 
@@ -69,5 +73,5 @@
     }
 
     .back-button:hover {
-        background-color: rgba(0, 0, 0, 0.05); /* Effet de survol très discret */
+        background-color: rgba(0, 0, 0, 0.05); 
     }
