--- a/pages/templates/pages/home/catalogue/model_view.html
+++ b/pages/templates/pages/home/catalogue/model_view.html
@@ -272,6 +272,8 @@
         </section>
     </main>
     
+    {% include "pages/home/catalogue/plus.html" %}
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Script pour la galerie de miniatures
